@@ -8,6 +8,7 @@ spool_directory = DIR/spool
 log_file_path = DIR/spool/log/%slog
 gecos_pattern = ""
 gecos_name = CALLER_NAME
+timezone = UTC
 
 # ----- Main settings -----
 
@@ -53,7 +54,8 @@ check_recipient:
 	  logwrite =  SN  <${certextract {subject}	{$tls_in_peercert}}>
           logwrite =  IN  <${certextract {issuer}	{$tls_in_peercert}}>
           logwrite =  IN/O <${certextract {issuer,O}	{$tls_in_peercert}}>
-          logwrite =  NB  <${certextract {notbefore}	{$tls_in_peercert}}>
+          logwrite =  NB/r <${certextract {notbefore,raw}	{$tls_in_peercert}}>
+          logwrite =  NB   <${certextract {notbefore}	{$tls_in_peercert}}>
           logwrite =  NB/i <${certextract {notbefore,int}{$tls_in_peercert}}>
           logwrite =  NA  <${certextract {notafter}	{$tls_in_peercert}}>
           logwrite =  SA  <${certextract {sig_algorithm}{$tls_in_peercert}}>
